--- a/Plugin/GUB/Project/Android/docker/Dockerfile
+++ b/Plugin/GUB/Project/Android/docker/Dockerfile
@@ -1,13 +1,10 @@
 FROM ubuntu:16.04
 
-
 #A docker with ubuntu:16.04 for Android GUB
-
 
 #=====================required linux build======================================
 RUN apt-get update && apt-get -y install git build-essential pkg-config wget unzip default-jre openjdk-8-jdk file
 #===============================================================================
-
 
 #=====================optional linux build======================================
 #GUB Ubuntu dependencies
@@ -16,21 +13,19 @@ RUN apt-get update && apt-get -y install git build-essential pkg-config wget unz
 #RUN apt-get -y install libsdl2-dev libglu1-mesa-dev freeglut3-dev
 #===============================================================================
 
-
 #=====================install android ndk=======================================
 ARG NDK_TARGET_LEVEL
 ARG NDK_APP_ABI
 
 ENV NDK_TARGET_LEVEL=${NDK_TARGET_LEVEL}
 ENV NDK_APP_ABI=${NDK_APP_ABI}
-ENV ANDROID_NDK_HOME /usr/local/android-ndk-r12b
+ENV ANDROID_NDK_HOME /usr/local/android-ndk-r19c
 
-RUN wget https://dl.google.com/android/repository/android-ndk-r12b-linux-x86_64.zip && \
-unzip -q android-ndk-r12b-linux-x86_64.zip -d /usr/local/ && \
-rm android-ndk-r12b-linux-x86_64.zip
+RUN wget https://dl.google.com/android/repository/android-ndk-r19c-linux-x86_64.zip && \
+unzip -q android-ndk-r19c-linux-x86_64.zip -d /usr/local/ && \
+rm android-ndk-r19c-linux-x86_64.zip
 ENV PATH $PATH:$ANDROID_NDK_HOME
 #===============================================================================
-
 
 #=====================install ant===============================================
 ARG ANT_VERSION
@@ -45,7 +40,6 @@ rm apache-ant-${ANT_VERSION}-bin.tar.gz
 ENV PATH ${PATH}:${ANT_HOME}/bin
 #===============================================================================
 
-
 #=====================install android SDK=======================================
 ENV ANDROID_SDK_HOME=/usr/local/android-sdk-linux
 
@@ -55,7 +49,6 @@ rm  android-sdk_r24.4.1-linux.tgz && \
 cd ${ANDROID_SDK_HOME}/tools && ( sleep 4 && while [ 1 ]; do sleep 1; echo y; done ) | ./android update sdk --no-ui -a --filter 1,2,3,4,${NDK_TARGET_LEVEL}
 ENV PATH $PATH:$ANDROID_SDK_HOME/tools
 #===============================================================================
-
 
 #=====================get gstreamer for android=================================
 ARG GST_ANDROID_ARCH
@@ -73,10 +66,10 @@ case "${SORTED_VERSIONS}" in \
          export GST_ANDROID_PATH=/usr/local/gstreamer/${GST_ANDROID_ARCH} ;; \
 esac && \
 
-wget https://gstreamer.freedesktop.org/data/pkg/android/${GST_ANDROID_VERSION}/gstreamer-1.0-android-${GST_ANDROID_PART}-${GST_ANDROID_VERSION}.tar.bz2 && \
+wget https://gstreamer.freedesktop.org/data/pkg/android/${GST_ANDROID_VERSION}/gstreamer-1.0-android-${GST_ANDROID_PART}-${GST_ANDROID_VERSION}.tar.xz && \
 mkdir -p ${GST_ANDROID_PATH} && \
-tar -xjf gstreamer-1.0-android-${GST_ANDROID_PART}-${GST_ANDROID_VERSION}.tar.bz2 -C ${GST_ANDROID_PATH} && \
-rm gstreamer-1.0-android-${GST_ANDROID_PART}-${GST_ANDROID_VERSION}.tar.bz2
+tar -Jxf gstreamer-1.0-android-${GST_ANDROID_PART}-${GST_ANDROID_VERSION}.tar.xz -C ${GST_ANDROID_PATH} && \
+rm gstreamer-1.0-android-${GST_ANDROID_PART}-${GST_ANDROID_VERSION}.tar.xz
 
 RUN sed -i -e 's/#define GST_GL_HAVE_GLSYNC 0/#define GST_GL_HAVE_GLSYNC 1/g' $GSTREAMER_ROOT_ANDROID/lib/gstreamer-1.0/include/gst/gl/gstglconfig.h
 RUN sed -i -e 's/#define GST_GL_HAVE_GLUINT64 0/#define GST_GL_HAVE_GLUINT64 1/g' $GSTREAMER_ROOT_ANDROID/lib/gstreamer-1.0/include/gst/gl/gstglconfig.h
@@ -84,7 +77,6 @@ RUN sed -i -e 's/#define GST_GL_HAVE_GLINT64 0/#define GST_GL_HAVE_GLINT64 1/g' 
 
 RUN cp $GSTREAMER_ROOT_ANDROID/lib/gstreamer-1.0/include/gst/gl/gstglconfig.h $GSTREAMER_ROOT_ANDROID/include/gstreamer-1.0/gst/gl/
 #===============================================================================
-
 
 #=====================entry point===============================================
 COPY ./entrypoint/ /home/docker-entrypoint
